--- a/YURI_Overlay.csproj
+++ b/YURI_Overlay.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>warnings</Nullable>
     <Platforms>AnyCPU;x64</Platforms>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
@@ -41,15 +41,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ImGui.NET">
       <HintPath>REFramework\plugins\managed\dependencies\ImGui.NET.dll</HintPath>
       <Private>True</Private>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="REFCoreDeps">
+      <HintPath>..\MHWilds-YURI-Overlay\REFramework\plugins\managed\dependencies\REFCoreDeps.dll</HintPath>
+	  <Private>True</Private>
     </Reference>
     <Reference Include="REFramework.NET">
       <HintPath>REFramework\plugins\REFramework.NET.dll</HintPath>
       <Private>True</Private>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
   </ItemGroup>
 </Project>
