--- a/.github/workflows/build-and-create-release.yml
+++ b/.github/workflows/build-and-create-release.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-and-create-pre-release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
