--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -33,3 +33,68 @@ jobs:
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_ANSIBLE: true
+          FIX_CLANG_FORMAT: true
+          FIX_CSHARP: true
+          FIX_CSS_PRETTIER: true
+          FIX_CSS: true
+          FIX_DOTNET_SLN_FORMAT_ANALYZERS: true
+          FIX_DOTNET_SLN_FORMAT_STYLE: true
+          FIX_DOTNET_SLN_FORMAT_WHITESPACE: true
+          FIX_ENV: true
+          FIX_GO_MODULES: true
+          FIX_GO: true
+          FIX_GOOGLE_JAVA_FORMAT: true
+          FIX_GRAPHQL_PRETTIER: true
+          FIX_GROOVY: true
+          FIX_HTML_PRETTIER: true
+          FIX_JAVASCRIPT_ES: true
+          FIX_JAVASCRIPT_PRETTIER: true
+          FIX_JAVASCRIPT_STANDARD: true
+          FIX_JSON_PRETTIER: true
+          FIX_JSON: true
+          FIX_JSONC: true
+          FIX_JSONC_PRETTIER: true
+          FIX_JSX_PRETTIER: true
+          FIX_JSX: true
+          FIX_JUPYTER_NBQA_BLACK: true
+          FIX_JUPYTER_NBQA_ISORT: true
+          FIX_JUPYTER_NBQA_RUFF: true
+          FIX_MARKDOWN_PRETTIER: true
+          FIX_MARKDOWN: true
+          FIX_POWERSHELL: true
+          FIX_PROTOBUF: true
+          FIX_PYTHON_BLACK: true
+          FIX_PYTHON_ISORT: true
+          FIX_PYTHON_PYINK: true
+          FIX_PYTHON_RUFF: true
+          FIX_RUBY: true
+          FIX_RUST_2015: true
+          FIX_RUST_2018: true
+          FIX_RUST_2021: true
+          FIX_RUST_CLIPPY: true
+          FIX_SCALAFMT: true
+          FIX_SHELL_SHFMT: true
+          FIX_SNAKEMAKE_SNAKEFMT: true
+          FIX_SQLFLUFF: true
+          FIX_TERRAFORM_FMT: true
+          FIX_TSX: true
+          FIX_TYPESCRIPT_ES: true
+          FIX_TYPESCRIPT_PRETTIER: true
+          FIX_TYPESCRIPT_STANDARD: true
+          FIX_VUE_PRETTIER: true
+          FIX_YAML_PRETTIER: true
+          
+      - name: Commit and push linting fixes
+        # Run only on:
+        # - Pull requests
+        # - Not on the default branch
+        if: >
+          github.event_name == 'pull_request' &&
+          github.ref_name != github.event.repository.default_branch
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
+          commit_message: "chore: fix linting issues"
+          commit_user_name: super-linter
+          commit_user_email: super-linter@super-linter.dev
